add contents to resume and update tmpl

--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
         <div class="jobBlock">
           <div class='blockHeader'>
             <span class='title'>
-              PNC, SVP, Technology Infrastructure (SRE)
+              PNC, SVP, Site Reliability Engineering
             </span>
             <span class='date'>
-              March 2019 &mdash; current
+              2019 &mdash; current
             </span>
           </div>
           <div><a href=''></a></div>
