add contents to resume and update tmpl

--- a/index.html
+++ b/index.html
@@ -257,7 +257,7 @@
         <div class="jobBlock">
           <div class='blockHeader'>
             <span class='title'>
-              PNC, SVP, Site Reliability Engineering
+              PNC, SVP, Technology Infrastructure (Site Reliability Engineering)
             </span>
             <span class='date'>
               2019 &mdash; current
