--- a/index.html
+++ b/index.html
@@ -418,6 +418,11 @@
           <span>Redis Graph</span>, <span>MySQL</span>, <span>MongoDB</span>
         </div>
         
+        <div class='skillBlock'>
+          <span class='title'>Experimental/Small Scale:</span>
+          <span>Clickhouse</span>, <span>CockroachDB</span>, <span>NiFi</span>, <span>Spark</span>
+        </div>
+        
       </div>
     </div>
     <div class='sectionLine'></div>
