--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 
     <div id='workBlock' class="sectionBlock">
       <div class='sectionName'>
-        <span>EXPERIENCE</span>
+        <span>WORK</span>
       </div>
       <div class='sectionContent'>
         
@@ -389,7 +389,7 @@
 
     <div id='stacks' class="sectionBlock">
       <div class='sectionName'>
-        <span>ENGINEERING STACKS</span>
+        <span>STACKS</span>
       </div>
       <div class='sectionContent'>
         
