--- a/index.html
+++ b/index.html
@@ -490,7 +490,10 @@
         
         <div class='educationBlock'>
           <span>
-            Deep Learning with https://www.fast.ai/ Part I
+            Deep Learning with 
+          </span>
+          <span class='url'>
+            <a href='https://www.fast.ai/'>https://www.fast.ai/</a>
           </span>
           <span class='date'>
             2020
@@ -504,6 +507,9 @@
           <span>
             Algorithmic Toolbox
           </span>
+          <span class='url'>
+            <a href=''></a>
+          </span>
           <span class='date'>
             2016
           </span>
@@ -515,6 +521,9 @@
         <div class='educationBlock'>
           <span>
             Probabilistic Graphical Models
+          </span>
+          <span class='url'>
+            <a href=''></a>
           </span>
           <span class='date'>
             2006
