--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             Deep Learning with 
           </span>
           <span class='url'>
-            <a href='https://www.fast.ai/'>https://www.fast.ai/</a>
+            <a href='https://www.fast.ai/'>fast.ai</a>
           </span>
           <span class='date'>
             2020
